# back

./: Dockerfile  README.md  alembic.ini  custom_prompts.py  docker-compose.yaml  main.py  pyproject.toml
app/: custom_logging.py  langfuse_bedrock.py  metrics.py  settings.py
app/api/: exception_handlers.py  exceptions.py  i18n.py  models.py
app/api/routers/: __init__.py  chat.py  chatbots.py  conversation.py  directories.py  files.py  groups.py  indexes.py  llms.py  settings.py  title.py  users.py
app/api/tools/: auth.py  conversation_title.py  db.py  document_manipulation.py  json_formatter.py
app/engine/: chains.py  client_getter.py  converter.py  file_remover.py  index.py  indexer.py  object_store.py  spendinglimits.py
app/jobs/: file_expiration.py
chart/: Chart.yaml  values.yaml
chart/templates/: _helpers.tpl  deployment.yaml  file-expiration-cronjob.yml  podmonitor.yaml  worker-deployment.yaml
ci/: pre-build.sh
evaluation/: eval_queries.py  ml_flow_testing.py  mlflow_gitlab.py
evaluation/Testing Embeddings 01/: answer_relevancy.csv  context_recall.csv  context_relevancy.csv  faithfulness.csv  harmlessness.csv
evaluation/Testing Embeddings 02/: context_entity_recall.csv  context_recall.csv  context_relevancy.csv  harmlessness.csv
evaluation/Testing Embeddings 03/: answer_correctness.csv
evaluation/Testing Extractors 01/: answer_correctness.csv  answer_relevancy.csv  context_entity_recall.csv  context_recall.csv  faithfulness.csv  harmlessness.csv
evaluation/Testing Extractors 02/: answer_correctness.csv  answer_similarity.csv  context_entity_recall.csv  context_recall.csv  harmlessness.csv
evaluation/datasets/: big_dataset.csv  pipeline_data.csv
evaluation/results/: results_table.md
migrations/: README.md  env.py
migrations/versions/: 02658dbf370a_one_to_many_constraints.py  06576de47f6f_conversation_owner_id.py  1ac06ea06d96_citation_in_conversation.py  20618054f0a3_add_adminsettings_table.py  326c81bfa910_llm_profiles.py  4500f2e7c8f9_remove_url_from_file.py  4f5db1227088_expiration.py  5361409361fc_bedrock.py  5e97a0231c5e_group_owner.py  643689bde6e7_directory_owner.py  707120461069_timezone.py  79a06bdf66cb_remove_unused_dbmessage_order_field.py  7c7fccd168af_llm_aws_region.py  876b8be16082_update_titleipdate_model_change_max_.py  941c40effa7c_groups.py  a103508c014d_add_namespace_field_to_file_model.py  a542a2ff2e39_directory_default.py  b1124d255c25_chatbot_soft_delete.py  cb7fd7380dc3_homogenize_timestamps.py  ce35174dd5fa_user_feedback.py  ce71d72138c7_no_chatbot_name_constraint.py  d6926a070eeb_fix_root_directory.py  d88117952f5f_reliable_indexing.py  e31e7a1e2d53_add_filebase_pdf_path_and_add_.py  e52e6d6a9268_group_name_constraint.py  efbccf5b771d_initial_schema.py  fc0cb08a4a51_email.py  fd1053375508_directory_first_class_citizen.py
tests/: conftest.py  constants.py  test_alembic_migrations.py  test_chains.py  test_chat.py  test_chatbots.py  test_conversations.py  test_converter.py  test_directories.py  test_error_codes.py  test_exception_handlers.py  test_feedback.py  test_files.py  test_get_conversation_title.py  test_groups.py  test_indexer.py  test_indexes.py  test_langfuse_bedrock.py  test_llms.py  test_settings.py  test_spendinglimits.py  test_title.py  test_users.py
tests/alembic_migration_inserts_by_revision/: rev_20618054f0a3.py  rev_326c81bfa910.py  rev_5361409361fc.py  rev_707120461069.py  rev_941c40effa7c.py  rev_e52e6d6a9268.py  rev_efbccf5b771d.py
(+214 files in other folders)
